# JKBMS-Fob

./: .gitignore  CMakeLists.txt  LovyanGFX.md  README.md  nvs.csv  sdkconfig
.github/workflows/: main.yml
main/: CMakeLists.txt  LGFX_Config.hpp  main.cpp
main/ble/: ble_task.c  ble_task.cpp  ble_task.h  ble_task.hpp
main/gui/: gui_task.cpp  gui_task.hpp
main/gui/images/: CommandsIcon.h  NavBar.h  NoBluetoothIcon.h  SearchIcon.h  SearchIconAnim.h  SettingsIcon.h  bleStatus.h  bleStatusBlue.h  mainui.h  splash.h
main/gui/screens/control_screen/: control_screen.cpp  control_screen.hpp
main/gui/screens/info_screen/: info_screen.cpp  info_screen.hpp
main/gui/screens/main_screen/: main_screen.cpp  main_screen.hpp
main/gui/screens/settings_screen/: settings_screen.cpp  settings_screen.hpp
main/gui/widgets/: widgets.cpp  widgets.hpp
main/helpers/: jkbms.c  jkbms.h  jkbms.hpp  page_states.hpp  utils.cpp  utils.h  utils.hpp
main/tasks/: ble_task.c  ble_task.h  fob_battery_monitor.c  fob_battery_monitor.h  gui_task.cpp  gui_task.h
