idf_component_register(SRCS "main.cpp"
"gui/gui_task.cpp"
"gui/screens/main_screen/main_screen.cpp"
"gui/screens/settings_screen/settings_screen.cpp"
"gui/screens/control_screen/control_screen.cpp"
"gui/screens/info_screen/info_screen.cpp"
"ble/ble_task.c"
"helpers/utils.cpp"
                    INCLUDE_DIRS "."
                    
                    )
